Add difficulty selection feature and update game instructions.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
       <img src="img/cw_logo.png" alt="charity: water logo">
       <h1>Water Quest</h1>
     </div>
+    <div class="difficulty-selector">
+      <h3>Choose Difficulty</h3>
+      <div class="difficulty-buttons">
+        <button class="difficulty-btn active" data-difficulty="easy">Easy</button>
+        <button class="difficulty-btn" data-difficulty="normal">Normal</button>
+        <button class="difficulty-btn" data-difficulty="hard">Hard</button>
+      </div>
+    </div>
     <div class="game-instructions">
-      Tap the yellow jerry cans to collect water! Avoid the brick emoji. <br>
-      Score 20+ in 30 seconds to win.
+      <span id="instructions-text">Tap the yellow jerry cans to collect water! Avoid the brick emoji. <br>
+      Score 15+ in 45 seconds to win.</span>
     </div>
     <div class="stats">
       <span>Score: <span class="score" id="score">0</span></span>
